--- a/Events/viewEvent.html
+++ b/Events/viewEvent.html
@@ -43,7 +43,7 @@
         </tr>
     </table>
 
-    <script src="Eventscript.js"></script>
+    <script src="eventscript.js"></script>
 
 </body>
 </html>
